--- a/src/pages/ways/index.astro
+++ b/src/pages/ways/index.astro
@@ -22,7 +22,7 @@ function toDate(dateString: string): Temporal.PlainDate {
 			waysEntries.map(w => (
 				// eslint-disable-next-line @typescript-eslint/no-unsafe-return
 				<li>
-					<LocalLink fileName={`ways/${w.slug}`}>{w.data.title}</LocalLink>,
+					<LocalLink fileName={`ways/${w.id}`}>{w.data.title}</LocalLink>,
 					{toDate(w.data.date).toLocaleString("en-US", { dateStyle: "medium" })}
 				</li>
 			))
